# Studies---Langchain

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
aulas_curso_langchain/: 02_models.ipynb  03_models_avancado.ipynb  04_prompt_templates.ipynb  05_output_parsers.ipynb  06_chains_com_lcel.ipynb  07_chains_e_langsmith.ipynb  08_runnables.ipynb  09_roteamento.ipynb  10_memory.ipynb  12_document_loaders.ipynb  13_text_splitting.ipynb  14_embeddings.ipynb  15_vector_stores.ipynb  16_retrieval.ipynb  17_pipeline_rag.ipynb
source/poc_langchain/: environs.py  huggingface.py
source/poc_langchain/OpenAI/: chain_1.py  chains_paralelas.py  memory.py  open_ai.py  roteamento.py
source/poc_langchain/RAG/: document_loaders.py  embeddings.py  introduction.md  pipeline_rag.py  pipeline_rag_2.py  retrieval.py  text_splitters.py  vector_store.py
