[project]
name = "poc_langchain"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain==0.3.13",
    "langchain-core==0.3.56",
    "langchain-openai==0.2.13",
    "langchain-community==0.3.0",
    "langchain-huggingface==0.1.2",
    "langchain-chroma==0.1.4",
    "transformers==4.47.1",
    "huggingface-hub==0.27.0",
    "sentence-transformers==3.3.1",
    "pydantic==2.7.4",
    "openai==1.55.3",
    "ipykernel",
    "jinja2==3.1.4",
    "pypdf==5.1.0",
    "yt-dlp",
    "pydub",
    "beautifulsoup4==4.12.3",
    "faiss-cpu==1.9.0.post1",
    "lark==1.2.2",
    "audioop-lts; python_version >= '3.13'",
]

[tool.poetry]
packages = [{include = "poc_langchain", from = "source"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
